# mongo-axum-sse

./: Cargo.toml  README.md
client_example/: client.js  index.html
src/: main.rs
