[package]
name = "rust-be"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.8.2"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4"
serde = "1"
futures = "0.3"
headers = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
serde_json = "1.0.134"

[dev-dependencies]
eventsource-stream = "0.2"
reqwest = { version = "0.12", features = ["stream"] }
reqwest-eventsource = "0.6"
